--- a/config.yaml
+++ b/config.yaml
@@ -5,4 +5,4 @@ target_architecture: "amd64"
 sender: "user@example.edu"
 recipient: "user@example.edu"
 subject: "Upstream Tomcat Digest Updated"
-ifttt_key: "your_ifttt_key_here"
+ifttt_key: "https://maker.ifttt.com/trigger/<your_trigger_applet>/with/key/your_ifttt_key_here"
